--- a/index.html
+++ b/index.html
@@ -2,110 +2,122 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-  <title itemprop="name">Komito</title>
-  <meta name="og:title" content="Komito">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <meta name="description" content="The Komito is a tool to unlock the power of digital analytics.">
-  <meta name="og:description" content="The Komito is a tool to unlock the power of digital analytics.">
-  <meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
-  <meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@vpodk">
-  <meta name="twitter:url" content="http://datamart.github.io/Komito/">
-  <meta itemprop="url" content="http://datamart.github.io/Komito/">
-  <link rel="canonical" href="http://datamart.github.io/Komito/">
-  <link href="/Komito/favicon.ico" rel="shortcut icon">
-  <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
-  <link href="./stylesheets/styles.css" rel="stylesheet">
-  <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
-  <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
+<title itemprop="name">Komito</title>
+<meta name="og:title" content="Komito">
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<meta name="description" content="The Komito is a tool to unlock the power of digital analytics.">
+<meta name="og:description" content="The Komito is a tool to unlock the power of digital analytics.">
+<meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
+<meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@vpodk">
+<meta name="twitter:url" content="http://datamart.github.io/Komito/">
+<meta itemprop="url" content="http://datamart.github.io/Komito/">
+<link rel="canonical" href="http://datamart.github.io/Komito/">
+<link href="/Komito/favicon.ico" rel="shortcut icon">
+<link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
+<link href="/Komito/stylesheets/styles.css" rel="stylesheet">
+<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
+<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
 </head>
 <body class="dtm-page-komito dtm-product">
-  <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
-  <div class="dtm-grid">
-    <div class="dtm-grid-row dtm-header">
-      <div class="dtm-grid-cell cell-span2 cell-offset2">
-        <div class="dtm-cell-body dtm-logo">
-          <a href="./"
-             class="dtm-ext-logo"
-             title="Komito"><img 
-             src="http://dtm.io/images/komito-logo-site.png"
-             alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
-          <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span class="dtm-nav-lines"></span></label>
-        </div>
-      </div>
-      <div class="dtm-grid-cell cell-span6">
-        <nav>
-          <ul class="dtm-nav">
-            <li class="dtm-nav-main-current"><a href='./' title='Komito Overview'>Overview</a></li>
-            <li><a href='./integration/' title='Komito Integration'>Integration</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-
+<input type="checkbox" id="dtm-nav-mobile" style="display:none;">
 <div class="dtm-grid">
-  <div class="dtm-content">
-    <div class="dtm-grid-row dtm-section">
-      <div class="dtm-grid-cell cell-span8 cell-offset2">
-        <div class="dtm-cell-body">
-          <h1>Komito at a Glance</h1>
-          <p class="txt-desc">
-            The Komito is a tool to unlock the power of digital analytics.
-            It enriches analytics data with important information about visitor's behavior.
-          </p>
-        </div>
+  <div class="dtm-grid-row dtm-header">
+    <div class="dtm-grid-cell cell-span2 cell-offset2">
+      <div class="dtm-cell-body dtm-logo">
+        <a href="/Komito/"
+           class="dtm-ext-logo"
+           title="Komito"><img 
+           src="http://dtm.io/images/komito-logo-site.png"
+           alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
+        <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
+               class="dtm-nav-lines"></span></label>
       </div>
     </div>
-    <div class="dtm-grid-row dtm-section">
-      <div class="dtm-grid-cell cell-span4 cell-offset3">
-        <div class="dtm-cell-body">
-          <h2>Advanced Metrics</h2>
-          <ul>
-            <li>Call to actions</li>
-            <li>Downloads</li>
-            <li>External links</li>
-            <li>Form submissions</li>
-            <li>Social widgets</li>
-          </ul>
-          <a href="./integration/#features" class="kc-features"
-             title="See all Komito features"><i>See all features</i>&nbsp;&rarr;</a>
-        </div>
-      </div>
-      <div class="dtm-grid-cell cell-span3">
-        <div class="dtm-cell-body">
-          <h2>Cross-Compatible</h2>
-          <ul>
-            <li><a target="_blank" rel="nofollow" href="http://www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
-            <li><a target="_blank" rel="nofollow" href="http://tongji.baidu.com/">Baidu Analytics</a></li>
-            <li><a target="_blank" rel="nofollow" href="http://www.clicktale.com/">ClickTale</a></li>
-            <li><a target="_blank" rel="nofollow" href="http://www.google.com/analytics/">Google Analytics</a></li>
-            <li><a target="_blank" rel="nofollow" href="https://support.google.com/urchin">Urchin</a></li>
-          </ul>
-        </div>
-      </div>
+    <div class="dtm-grid-cell cell-span6">
+      <nav>
+        <ul class="dtm-nav">
+          <li class="dtm-nav-main-current"><a href='/Komito/'
+              title='Komito Overview'>Overview</a></li>
+          <li><a href='/Komito/integration/'
+                 title='Komito Integration'>Integration</a></li>
+        </ul>
+      </nav>
     </div>
+  </div>
 
-    <div class="dtm-grid-row dtm-section">
-      <div class="dtm-grid-cell cell-span8 cell-offset2">
-        <div class="dtm-cell-body">
-          <p class="txt-desc" style="text-align:center">
-            * Caring about privacy and security, the Komito <b>does not store</b> any data.
-          </p>
+  <div class="dtm-grid">
+    <div class="dtm-content">
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">
+          <div class="dtm-cell-body">
+            <h1>Komito at a Glance</h1>
+            <p class="txt-desc">
+              The Komito is a tool to unlock the power of digital analytics.
+              It enriches analytics data with important information about
+              visitor's behavior.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset3">
+          <div class="dtm-cell-body">
+            <h2>Advanced Metrics</h2>
+            <ul>
+              <li>Call to actions</li>
+              <li>Downloads</li>
+              <li>External links</li>
+              <li>Form submissions</li>
+              <li>Social widgets</li>
+            </ul>
+            <a href="/Komito/integration/#features" class="kc-features"
+               title="See all Komito features"><i>See all features</i> →</a>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span3">
+          <div class="dtm-cell-body">
+            <h2>Cross-Compatible</h2>
+            <ul>
+              <li><a target="_blank" rel="nofollow"
+                     href="//www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
+              <li><a target="_blank" rel="nofollow"
+                     href="//tongji.baidu.com/">Baidu Analytics</a></li>
+              <li><a target="_blank" rel="nofollow"
+                     href="//www.clicktale.com/">ClickTale</a></li>
+              <li><a target="_blank" rel="nofollow"
+                     href="//www.google.com/analytics/">Google Analytics</a></li>
+              <li><a target="_blank" rel="nofollow"
+                     href="//support.google.com/urchin">Urchin</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-    <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
-      <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
-           href="./integration/">integration</a> example&nbsp;&nbsp;-OR-&nbsp;&nbsp;&nbsp;<a
-           title="Download Komito" class="dtm-button clr-red"
-           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Now</span></a>
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">
+          <div class="dtm-cell-body">
+            <p class="txt-desc" style="text-align:center">
+              * Caring about privacy and security, the Komito
+              <b>does not store</b> any data.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
+             href="/Komito/integration/">integration</a>
+             example &nbsp;-OR-&nbsp; &nbsp;<a
+             title="Download Komito" class="dtm-button clr-red"
+             href="//github.com/Datamart/Komito/tree/master"><span>
+             Get Komito Now</span></a>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
   <div class="dtm-grid-row dtm-footer">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
@@ -127,11 +139,13 @@
           </div>
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
-            <p style="text-align:right;margin-top:.8em">
-              Komito is subject to the terms and conditions of
-              <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
-              <br>© 2015 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
-            </p>
+              <p style="text-align:right;margin-top:.8em">
+                Komito is subject to the terms and conditions of
+                <a href="http://www.apache.org/licenses/LICENSE-2.0"
+                  title="Apache License">Apache License 2.0</a>
+                <br>© 2015 <a href="http://dtm.io"
+                  title="Datamart Inc.">Datamart Inc.</a>
+              </p>
             </div>
           </div>
         </div>
