updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -76,9 +76,10 @@
   &lt;/script&gt;</pre></code>
 
           <h3 id="features">Komito configuration parameters:</h3>
-            <h4>Social:</h4>
-            <p>Tracks users' interaction with different on page widgets.
-              Statistics available in custom reports or in social report.</p>
+            <h4>Social interaction:</h4>
+            <p>Tracks users' interaction using social widgets.
+              Statistics available in events, social or custom reports.
+            </p>
             <p class="kc-parameter">
               <code>trackTwitter</code> Tracks <a target="_blank" rel="nofollow"
               href="https://dev.twitter.com/docs/tfw/events">Twitter</a>
