updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -108,12 +108,12 @@
               <code>trackDownloads</code> Tracks downloads by different file types.
             </p>
             <p>Default file extensions:
-              Media: <code>mp3, mp4, wma, mov, avi, wmv, mkv<code><br>
-              Fonts: <code>eot, woff, ttf<code><br>
-              Text: <code>txt, csv, tsv<code><br>
-              Docs: <code>pdf, doc, docx, xls, xlsx, ppt, pptx<code><br>
-              Archives: <code>zip, tar, tgz, bz2, gz, rar, dmg, pkg, 7z<code><br>
-              Other: <code>ida, exe, sh, bat<code><br>
+              Media: <code>mp3, mp4, wma, mov, avi, wmv, mkv</code><br>
+              Fonts: <code>eot, woff, ttf</code><br>
+              Text: <code>txt, csv, tsv</code><br>
+              Docs: <code>pdf, doc, docx, xls, xlsx, ppt, pptx</code><br>
+              Archives: <code>zip, tar, tgz, bz2, gz, rar, dmg, pkg, 7z</code><br>
+              Other: <code>ida, exe, sh, bat</code>
             </p>
 
             <h4>External links</h4>
