updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -80,19 +80,19 @@
             <p>Tracks users' interaction using social widgets.
               Statistics available in events, social or custom reports.
             </p>
-            <p class="kc-parameter">
+            <p>
               <code>trackTwitter</code> Tracks <a target="_blank" rel="nofollow"
               href="https://dev.twitter.com/docs/tfw/events">Twitter</a>
               events if widget presents on page.
               Tracking events: favorite, follow, retweet, tweet.
             </p>
-            <p class="kc-parameter">
+            <p>
               <code>trackFacebook</code> Tracks <a target="_blank" rel="nofollow"
               href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe">Facebook</a>
               events if widget presents on page.
               Tracking events: like, unlike, message.
             </p>
-            <p class="kc-parameter">
+            <p>
               <code>trackLinkedIn</code> Tracks <a target="_blank" rel="nofollow"
               href="https://developer.linkedin.com/plugins">LinkedIn</a>
               events if plugin presents on page.
@@ -104,7 +104,7 @@
               Tracks downloads by file types.
               Statistics available in events or custom report.
             </p>
-            <p class="kc-parameter">
+            <p>
               <code>trackDownloads</code> Tracks downloads by different file types.
             </p>
             <p>Default file extensions:
@@ -118,20 +118,20 @@
 
             <h4>External links</h4>
             <p>Tracks all outbounding links. Recognises links to social networks and lists those in the social report as well. Statistics available in custom reports or in events report (statistics for links to social networks will be available in social report).</p>
-            <p class="kc-parameter"><code>trackOutbound</code> — Tracks all outbounding links.</p>
+            <p><code>trackOutbound</code> — Tracks all outbounding links.</p>
             <p>List of social networks: <i>Google+, Blogger, Facebook, Twitter, LinkedIn, MySpace, VKontakte, Odnoklassniki, Xing, YouTube, Twoo, Reddit, Pinterest, Digg, Foursquare</i>.</p>
 
             <h4>Forms</h4>
             <p>Tracks submitted forms. Statistics available in custom reports or in events report.</p>
-            <p class="kc-parameter"><code>trackForms</code> — Attaches event listener to all forms on page.</p>
+            <p><code>trackForms</code> — Attaches event listener to all forms on page.</p>
 
             <h4>Logged in Users</h4>
             <p>Tracks users that are logged in some social network while browsing your site. Statistics available in custom reports or in social report. Networks: Facebook, Google+, Twitter</p>
-            <p class="kc-parameter"><code>trackUsers</code> — Tracks users logged in to social networks.</p>
+            <p><code>trackUsers</code> — Tracks users logged in to social networks.</p>
 
             <h4>Call to action links</h4>
             <p>Tracks action links (mailto, tel, skype, etc). Statistics available in custom reports or in events report.</p>
-            <p class="kc-parameter"><code>trackActions</code> — Attaches event listener to action links.</p>
+            <p><code>trackActions</code> — Attaches event listener to action links.</p>
         </div>
       </div>
     </div>
