updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -77,10 +77,10 @@
 
           <h3 id="features">Komito configuration parameters:</h3>
             <h4>Social Interaction:</h4>
-            <p>Tracks users' interaction using social widgets.
+            <div>Tracks users' interaction using social widgets.
               Statistics available in events, social or custom reports.
-            </p>
-            <p>
+            </div>
+            <div>
               <code>trackTwitter</code> Tracks <a target="_blank" rel="nofollow"
               href="https://dev.twitter.com/docs/tfw/events">Twitter</a>
               events if widget presents on page.
@@ -95,24 +95,26 @@
               href="https://developer.linkedin.com/plugins">LinkedIn</a>
               events if plugin presents on page.
               Tracking events: share, follow.
-            </p>
+            </div>
 
             <h4>Files Downloads:</h4>
-            <p>
-              Tracks downloads by file types.
+            <div>
+              Tracks downloads by filename extension.
               Statistics available in events or custom report.
-            </p>
-            <p>
-              <code>trackDownloads</code> Tracks downloads by different file types.
-            </p>
-            <p>Default file extensions:
+            </div>
+            <div>
+              <code>trackDownloads</code> Tracks downloads by
+              <a target="_blank" rel="nofollow"
+              href="http://en.wikipedia.org/wiki/Filename_extension">filename extension</a>.
+            </div>
+            <div>Default file extensions:
               <br>Media: <code>mp3, mp4, wma, mov, avi, wmv, mkv</code>
               <br>Fonts: <code>eot, woff, ttf</code>
               <br>Text: <code>txt, csv, tsv</code>
               <br>Docs: <code>pdf, doc, docx, xls, xlsx, ppt, pptx</code>
               <br>Archives: <code>zip, tar, tgz, bz2, gz, rar, dmg, pkg, 7z</code>
               <br>Other: <code>ida, exe, sh, bat</code>
-            </p>
+            </div>
 
             <h4>External links</h4>
             <p>Tracks all outbounding links. Recognises links to social networks and lists those in the social report as well. Statistics available in custom reports or in events report (statistics for links to social networks will be available in social report).</p>
