updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -77,43 +77,33 @@
 
           <h3 id="features">Komito configuration parameters:</h3>
             <h4>Social Interaction:</h4>
-            <div>Tracks users' interaction using social widgets.
-              Statistics available in events, social or custom reports.
-            </div>
             <div>
-              <code>trackTwitter</code> Tracks <a target="_blank" rel="nofollow"
+              • <samp>trackTwitter</samp> Tracks <a target="_blank" rel="nofollow"
               href="https://dev.twitter.com/docs/tfw/events">Twitter</a>
-              events if widget presents on page.
-              Tracking events: favorite, follow, retweet, tweet.
+              events: <samp>favorite, follow, retweet, tweet</samp>.
               <br>
-              <code>trackFacebook</code> Tracks <a target="_blank" rel="nofollow"
+              • <samp>trackFacebook</samp> Tracks <a target="_blank" rel="nofollow"
               href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe">Facebook</a>
-              events if widget presents on page.
-              Tracking events: like, unlike, message.
+              events: <samp>like, unlike, message</samp>.
               <br>
-              <code>trackLinkedIn</code> Tracks <a target="_blank" rel="nofollow"
+              • <samp>trackLinkedIn</samp> Tracks <a target="_blank" rel="nofollow"
               href="https://developer.linkedin.com/plugins">LinkedIn</a>
-              events if plugin presents on page.
-              Tracking events: share, follow.
+              events: <samp>share, follow</samp>.
             </div>
 
             <h4>Files Downloads:</h4>
             <div>
-              Tracks downloads by filename extension.
-              Statistics available in events or custom report.
-            </div>
-            <div>
-              <code>trackDownloads</code> Tracks downloads by
+              • <samp>trackDownloads</samp> Tracks downloads by
               <a target="_blank" rel="nofollow"
               href="http://en.wikipedia.org/wiki/Filename_extension">filename extension</a>.
             </div>
-            <div>Default file extensions:
-              <br>Media: <code>mp3, mp4, wma, mov, avi, wmv, mkv</code>
-              <br>Fonts: <code>eot, woff, ttf</code>
-              <br>Text: <code>txt, csv, tsv</code>
-              <br>Docs: <code>pdf, doc, docx, xls, xlsx, ppt, pptx</code>
-              <br>Archives: <code>zip, tar, tgz, bz2, gz, rar, dmg, pkg, 7z</code>
-              <br>Other: <code>ida, exe, sh, bat</code>
+            <div>
+              <br>• Media: <samp>mp3, mp4, wma, mov, avi, wmv, mkv</samp>
+              <br>• Fonts: <samp>eot, woff, ttf</samp>
+              <br>• Text: <samp>txt, csv, tsv</samp>
+              <br>• Docs: <samp>pdf, doc, docx, xls, xlsx, ppt, pptx</samp>
+              <br>• Archives: <samp>zip, tar, tgz, bz2, gz, rar, dmg, pkg, 7z</samp>
+              <br>• Other: <samp>ida, exe, sh, bat</samp>
             </div>
 
             <h4>External links</h4>
