updted integration instruction

--- a/integration/index.html
+++ b/integration/index.html
@@ -71,7 +71,7 @@
       'trackPrint': 1,     // Tracks page print actions.
       'trackMedia': 1,     // Tracks HTML5 video, audio and YouTube player events.
       'trackScroll': 1,    // Tracks scroll depth.
-      'debugMode': 0       // Enables 'debug' mode.
+      'debugMode': 0       // Prints all requests to console.
     };
   &lt;/script&gt;</pre></code>
 
@@ -80,15 +80,31 @@
             <div>
               • <samp>trackTwitter</samp> Tracks <a target="_blank" rel="nofollow"
               href="https://dev.twitter.com/docs/tfw/events">Twitter</a>
-              events: <samp>favorite, follow, retweet, tweet</samp>.
+              events: <samp>
+              <a target="_blank" rel="nofollow"
+              href="https://dev.twitter.com/web/javascript/events#event-favorite">favorite</a>,
+              <a target="_blank" rel="nofollow"
+              href="https://dev.twitter.com/web/javascript/events#event-follow">follow</a>,
+              <a target="_blank" rel="nofollow"
+              href="https://dev.twitter.com/web/javascript/events#event-retweet">retweet</a>,
+              <a target="_blank" rel="nofollow"
+              href="https://dev.twitter.com/web/javascript/events#event-tweet">tweet</a></samp>.
               <br>
               • <samp>trackFacebook</samp> Tracks <a target="_blank" rel="nofollow"
               href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe">Facebook</a>
-              events: <samp>like, unlike, message</samp>.
+              events: <samp><a target="_blank" rel="nofollow"
+              href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#like-example">like</a>,
+              <a target="_blank" rel="nofollow"
+              href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#like-example">unlike</a>,
+              <a target="_blank" rel="nofollow"
+              href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#message-example">message</a></samp>.
               <br>
               • <samp>trackLinkedIn</samp> Tracks <a target="_blank" rel="nofollow"
               href="https://developer.linkedin.com/plugins">LinkedIn</a>
-              events: <samp>share, follow</samp>.
+              events: <samp><a target="_blank" rel="nofollow"
+              href="https://developer.linkedin.com/plugins/share">share</a>,
+              <a target="_blank" rel="nofollow"
+              href="https://developer.linkedin.com/plugins/follow-company">follow</a></samp>.
             </div>
 
             <h4>Files Downloads:</h4>
